added signout feature

--- a/src/styles/signin.css
+++ b/src/styles/signin.css
@@ -18,3 +18,12 @@
   cursor: pointer;
   text-decoration: underline;
 }
+
+#error {
+  color: red;
+}
+
+#home {
+  position: absolute;
+  left: 50px;
+}
