--- a/src/styles/signin.css
+++ b/src/styles/signin.css
@@ -6,8 +6,10 @@
   border: 1px solid rgb(0, 188, 212);
   border-radius: 5px;
   width: 350px;
-  margin: 60px auto;
+  margin: 0 auto;
   box-shadow: 0px 2px 2px 1px rgba(0, 0, 0, .2);
+  position: relative;
+  top: 100px;
 }
 
 #create {
