--- a/src/styles/create-meetups.css
+++ b/src/styles/create-meetups.css
@@ -11,11 +11,14 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-bottom: 100px;
-  position: relative;
-  top: 100px;
 }
 
 .when {
   color: #616161;
+}
+
+#create-meetup-content {
+  margin-bottom: 100px;
+  position: relative;
+  top: 100px;
 }
