--- a/src/styles/meetup-page.css
+++ b/src/styles/meetup-page.css
@@ -1,16 +1,13 @@
 #meetup-page-content {
   position: relative;
   top: 120px;
-  margin: 0 auto;
   margin-bottom: 100px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
 }
 
 #meetup-page-card {
-  width: 50%;
-
+  max-width: 760px;
+  margin: 0 auto;
 }
 
 #time {
