--- a/src/styles/create-meetups.css
+++ b/src/styles/create-meetups.css
@@ -7,7 +7,7 @@
   height: 250px;
 }
 
-#meetup-form {
+.center {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -21,4 +21,10 @@
   margin-bottom: 100px;
   position: relative;
   top: 100px;
+
+}
+
+#center {
+  margin-left: auto;
+  margin-right: auto;
 }
