--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -2,3 +2,15 @@
   display:flex;
   align-items: center;
 }
+
+@media only screen and (max-width: 760px) {
+    #button-layout {
+      display: none;
+    }
+
+}
+
+#notification {
+  display:flex;
+  align-items: center;
+}
